# problem_single

./: BunsanProtogen.json  CMakeLists.txt  Doxyfile
doc/: buildable.txt  format_simple0.md  format_simple0_page.txt  ini.txt  problem.md  problem.txt  statement.txt  utility.txt
go/bacs/problem/single/: intermediate.pb.go  problem.pb.go  result.pb.go  task.pb.go  testing.pb.go  tests.pb.go
go/bacs/problem/single/process/: execution.pb.go  file.pb.go  settings.pb.go
go/bacs/problem/single/test/: query.pb.go  sequence.pb.go
include/bacs/problem/single/: driver.hpp  error.hpp  generator.hpp  importer.hpp  intermediate.proto  problem.proto  process.proto  resource.proto  result.proto  settings.proto  task.proto  test.proto  testing.proto  tests.hpp
include/bacs/problem/single/detail/: list_tests.hpp  path.hpp
include/bacs/problem/single/pb/: intermediate.proto  problem.proto  resource.proto  result.proto  settings.proto  task.proto  testing.proto
include/bacs/problem/single/process/: execution.proto  file.proto  settings.proto
include/bacs/problem/single/test/: error.hpp  list_storage.hpp  matcher.hpp  query.proto  sequence.proto  storage.hpp
include/bacs/single/problem/: buildable.hpp  driver.hpp  error.hpp  generator.hpp  statement.hpp  tests.hpp  utility.hpp
include/bacs/single/problem/detail/: path.hpp  resource.hpp  split.hpp
src/: driver.cpp  generator.cpp  importer.cpp  tests.cpp
src/detail/: list_tests.cpp  path.cpp
src/drivers/: simple0.cpp  simple0.hpp  simple0_tests.cpp  simple0_tests.hpp
src/drivers/polygon_codeforces_com/: driver.cpp  driver.hpp  statement.cpp  statement.hpp  tests.cpp  tests.hpp
src/drivers/simple0/: driver.cpp  driver.hpp  tests.cpp  tests.hpp
src/drivers/simple0/tests/: embedded.cpp  embedded.hpp
src/generators/: internal0.cpp  internal0.hpp  legacy0.cpp  legacy0.hpp
src/lib/: buildable.cpp  driver.cpp  generator.cpp  statement.cpp  tests.cpp  utility.cpp
src/lib/detail/: path.cpp  resource.cpp
src/lib/drivers/: simple0.cpp  simple0.hpp  simple0_tests.cpp  simple0_tests.hpp
src/lib/generators/: internal0.cpp  internal0.hpp
src/lib/statement_versions/: copy.cpp  copy.hpp  pdflatex.cpp  pdflatex.hpp
src/lib/utilities/: no.cpp  none.cpp  single.cpp  single.hpp
src/test/: list_storage.cpp  matcher.cpp  storage.cpp
tests/: resource.cpp  test.cpp
